@@ -20,6 +20,7 @@
 	- DCI history data viewer improved
 	- Graphs improved
 - nxsnmpset utility improved
+- nxevent: added -e command line option to turn on session encryption
 - Implemented parameter UPS.Load for BCM/XCP compatible devices
 - Fixed issues: #4, #20, #47, #67, #79, #80, #91, #92, #93, #94, #95, #96, #97,
                 #98, #99, #100, #103
